# saralBackend

./: .env  .gitignore  Procfile  README.md  README.rst  pyproject.toml  requirements.txt
app_control/: admin.py  models.py  serializers.py  urls.py  views.py
app_control/migrations/: 0001_initial.py  0002_shop.py  0003_invoice_invoiceitem.py
inventory_api/: custom_methods.py  settings.py  urls.py  utils.py
inventory_app_control/: apps.py  models.py  serializers.py  urls.py  views.py
inventory_app_control/commons/: renderers.py
inventory_app_control/migrations/: 0001_initial.py  0002_alter_fooditem_name.py
tests/: test_inventory_api.py
user_control/: admin.py  models.py  serializers.py  urls.py  views.py
user_control/migrations/: 0001_initial.py  0002_auto_20211111_1719.py
